@@ -5,7 +5,7 @@
 
     Lexers for non-source code file types.
 
-    :copyright: 2006-2007 by Armin Ronacher, Georg Brandl,
+    :copyright: 2006-2008 by Armin Ronacher, Georg Brandl,
                 Tim Hatch <tim@timhatch.com>,
                 Ronny Pfannschmidt,
                 Dennis Kaarsemaker,
@@ -26,9 +26,8 @@ from bisect import bisect
 
 from pygments.lexer import Lexer, LexerContext, RegexLexer, ExtendedRegexLexer, \
      bygroups, include, using, this, do_insertions
-from pygments.token import Punctuation, \
-    Text, Comment, Keyword, Name, String, Generic, Operator, Number, \
-    Whitespace, Literal
+from pygments.token import Punctuation, Text, Comment, Keyword, Name, String, \
+     Generic, Operator, Number, Whitespace, Literal
 from pygments.util import get_bool_opt
 from pygments.lexers.other import BashLexer
 
@@ -36,7 +35,7 @@ __all__ = ['IniLexer', 'SourcesListLexer', 'BaseMakefileLexer',
            'MakefileLexer', 'DiffLexer', 'IrcLogsLexer', 'TexLexer',
            'GroffLexer', 'ApacheConfLexer', 'BBCodeLexer', 'MoinWikiLexer',
            'RstLexer', 'VimLexer', 'GettextLexer', 'SquidConfLexer',
-           'DebianControlLexer', 'DarcsPatchLexer', 'YAMLLexer']
+           'DebianControlLexer', 'DarcsPatchLexer', 'YamlLexer']
 
 
 class IniLexer(RegexLexer):
@@ -982,19 +981,23 @@ class DebianControlLexer(RegexLexer):
     }
 
 
-class YAMLLexerContext(LexerContext):
+class YamlLexerContext(LexerContext):
     """Indentation context for the YAML lexer."""
 
     def __init__(self, *args, **kwds):
-        super(YAMLLexerContext, self).__init__(*args, **kwds)
+        super(YamlLexerContext, self).__init__(*args, **kwds)
         self.indent_stack = []
         self.indent = -1
         self.next_indent = 0
         self.block_scalar_indent = None
 
 
-class YAMLLexer(ExtendedRegexLexer):
-    """Lexer for YAML, a human-friendly data serialization language (http://yaml.org/)."""
+class YamlLexer(ExtendedRegexLexer):
+    """
+    Lexer for YAML, a human-friendly data serialization language (http://yaml.org/).
+
+    *New in Pygments 0.11.*
+    """
 
     name = 'YAML'
     aliases = ['yaml']
@@ -1002,17 +1005,17 @@ class YAMLLexer(ExtendedRegexLexer):
     mimetypes = ['text/x-yaml']
 
 
-    def something(TokenClass):
+    def something(token_class):
         """Do not produce empty tokens."""
         def callback(lexer, match, context):
             text = match.group()
             if not text:
                 return
-            yield match.start(), TokenClass, text
+            yield match.start(), token_class, text
             context.pos = match.end()
         return callback
 
-    def reset_indent(TokenClass):
+    def reset_indent(token_class):
         """Reset the indentation levels."""
         def callback(lexer, match, context):
             text = match.group()
@@ -1020,11 +1023,11 @@ class YAMLLexer(ExtendedRegexLexer):
             context.indent = -1
             context.next_indent = 0
             context.block_scalar_indent = None
-            yield match.start(), TokenClass, text
+            yield match.start(), token_class, text
             context.pos = match.end()
         return callback
 
-    def save_indent(TokenClass, start=False):
+    def save_indent(token_class, start=False):
         """Save a possible indentation level."""
         def callback(lexer, match, context):
             text = match.group()
@@ -1040,13 +1043,13 @@ class YAMLLexer(ExtendedRegexLexer):
             else:
                 context.next_indent += len(text)
             if text:
-                yield match.start(), TokenClass, text
+                yield match.start(), token_class, text
             if extra:
-                yield match.start()+len(text), TokenClass.Error, extra
+                yield match.start()+len(text), token_class.Error, extra
             context.pos = match.end()
         return callback
 
-    def set_indent(TokenClass, implicit=False):
+    def set_indent(token_class, implicit=False):
         """Set the previously saved indentation level."""
         def callback(lexer, match, context):
             text = match.group()
@@ -1055,11 +1058,11 @@ class YAMLLexer(ExtendedRegexLexer):
                 context.indent = context.next_indent
             if not implicit:
                 context.next_indent += len(text)
-            yield match.start(), TokenClass, text
+            yield match.start(), token_class, text
             context.pos = match.end()
         return callback
 
-    def set_block_scalar_indent(TokenClass):
+    def set_block_scalar_indent(token_class):
         """Set an explicit indentation level for a block scalar."""
         def callback(lexer, match, context):
             text = match.group()
@@ -1072,28 +1075,28 @@ class YAMLLexer(ExtendedRegexLexer):
                 increment = int(increment)
                 context.block_scalar_indent = current_indent + increment
             if text:
-                yield match.start(), TokenClass, text
+                yield match.start(), token_class, text
                 context.pos = match.end()
         return callback
 
-    def parse_block_scalar_empty_line(IndentTokenClass, ContentTokenClass):
+    def parse_block_scalar_empty_line(indent_token_class, content_token_class):
         """Process an empty line in a block scalar."""
         def callback(lexer, match, context):
             text = match.group()
             if (context.block_scalar_indent is None or
                     len(text) <= context.block_scalar_indent):
                 if text:
-                    yield match.start(), IndentTokenClass, text
+                    yield match.start(), indent_token_class, text
             else:
                 indentation = text[:context.block_scalar_indent]
                 content = text[context.block_scalar_indent:]
-                yield match.start(), IndentTokenClass, indentation
+                yield match.start(), indent_token_class, indentation
                 yield (match.start()+context.block_scalar_indent,
-                        ContentTokenClass, content)
+                        content_token_class, content)
             context.pos = match.end()
         return callback
 
-    def parse_block_scalar_indent(TokenClass):
+    def parse_block_scalar_indent(token_class):
         """Process indentation spaces in a block scalar."""
         def callback(lexer, match, context):
             text = match.group()
@@ -1109,11 +1112,11 @@ class YAMLLexer(ExtendedRegexLexer):
                     context.stack.pop()
                     return
             if text:
-                yield match.start(), TokenClass, text
+                yield match.start(), token_class, text
                 context.pos = match.end()
         return callback
 
-    def parse_plain_scalar_indent(TokenClass):
+    def parse_plain_scalar_indent(token_class):
         """Process indentation spaces in a plain scalar."""
         def callback(lexer, match, context):
             text = match.group()
@@ -1122,81 +1125,77 @@ class YAMLLexer(ExtendedRegexLexer):
                 context.stack.pop()
                 return
             if text:
-                yield match.start(), TokenClass, text
+                yield match.start(), token_class, text
                 context.pos = match.end()
         return callback
 
 
 
     tokens = {
-
         # the root rules
         'root': [
             # ignored whitespaces
-            (r'[ ]+(?=#|$)', Text.Blank),
+            (r'[ ]+(?=#|$)', Text),
             # line breaks
-            (r'\n+', Text.Break),
+            (r'\n+', Text),
             # a comment
             (r'#[^\n]*', Comment.Single),
             # the '%YAML' directive
-            (r'^%YAML(?=[ ]|$)', reset_indent(Name.Directive),
-                'yaml-directive'),
+            (r'^%YAML(?=[ ]|$)', reset_indent(Name.Tag), 'yaml-directive'),
             # the %TAG directive
-            (r'^%TAG(?=[ ]|$)', reset_indent(Name.Directive),
-                'tag-directive'),
+            (r'^%TAG(?=[ ]|$)', reset_indent(Name.Tag), 'tag-directive'),
             # document start and document end indicators
-            (r'^(?:---|\.\.\.)(?=[ ]|$)',
-                reset_indent(Punctuation.Document), 'block-line'),
+            (r'^(?:---|\.\.\.)(?=[ ]|$)', reset_indent(Name.Namespace),
+             'block-line'),
             # indentation spaces
-            (r'[ ]*(?![ \t\n\r\f\v]|$)',
-                save_indent(Text.Indent, start=True),
-                ('block-line', 'indentation')),
+            (r'[ ]*(?![ \t\n\r\f\v]|$)', save_indent(Text, start=True),
+             ('block-line', 'indentation')),
         ],
 
         # trailing whitespaces after directives or a block scalar indicator
         'ignored-line': [
             # ignored whitespaces
-            (r'[ ]+(?=#|$)', Text.Blank),
+            (r'[ ]+(?=#|$)', Text),
             # a comment
             (r'#[^\n]*', Comment.Single),
             # line break
-            (r'\n', Text.Break, '#pop:2'),
+            (r'\n', Text, '#pop:2'),
         ],
 
         # the %YAML directive
         'yaml-directive': [
             # the version number
             (r'([ ]+)([0-9]+\.[0-9]+)',
-                bygroups(Text.Blank, Literal.Version), 'ignored-line'),
+             bygroups(Text, Number), 'ignored-line'),
         ],
 
         # the %YAG directive
         'tag-directive': [
             # a tag handle and the corresponding prefix
             (r'([ ]+)(!|![0-9A-Za-z_-]*!)'
-                r'([ ]+)(!|!?[0-9A-Za-z;/?:@&=+$,_.!~*\'()\[\]%-]+)',
-                bygroups(Text.Blank, Name.Type, Text.Blank, Name.Type),
-                'ignored-line'),
+             r'([ ]+)(!|!?[0-9A-Za-z;/?:@&=+$,_.!~*\'()\[\]%-]+)',
+             bygroups(Text, Keyword.Type, Text, Keyword.Type),
+             'ignored-line'),
         ],
 
         # block scalar indicators and indentation spaces
         'indentation': [
             # trailing whitespaces are ignored
-            (r'[ ]*$', something(Text.Blank), '#pop:2'),
+            (r'[ ]*$', something(Text), '#pop:2'),
             # whitespaces preceeding block collection indicators
-            (r'[ ]+(?=[?:-](?:[ ]|$))', save_indent(Text.Indent)),
+            (r'[ ]+(?=[?:-](?:[ ]|$))', save_indent(Text)),
             # block collection indicators
             (r'[?:-](?=[ ]|$)', set_indent(Punctuation.Indicator)),
             # the beginning a block line
-            (r'[ ]*', save_indent(Text.Indent), '#pop'),
+            (r'[ ]*', save_indent(Text), '#pop'),
         ],
 
         # an indented line in the block context
         'block-line': [
             # the line end
-            (r'[ ]*(?=#|$)', something(Text.Blank), '#pop'),
+            (r'[ ]*(?=#|$)', something(Text), '#pop'),
             # whitespaces separating tokens
-            (r'[ ]+', Text.Blank),
+            (r'[ ]+', Text),
             # tags, anchors and aliases,
             include('descriptors'),
             # block collections and scalars
@@ -1205,21 +1204,21 @@ class YAMLLexer(ExtendedRegexLexer):
             include('flow-nodes'),
             # a plain scalar
             (r'(?=[^ \t\n\r\f\v?:,\[\]{}#&*!|>\'"%@`-]|[?:-][^ \t\n\r\f\v])',
-                something(Literal.Scalar.Plain),
-                'plain-scalar-in-block-context'),
+             something(Name.Variable),
+             'plain-scalar-in-block-context'),
         ],
 
         # tags, anchors, aliases
         'descriptors' : [
             # a full-form tag
-            (r'!<[0-9A-Za-z;/?:@&=+$,_.!~*\'()\[\]%-]+>', Name.Type),
+            (r'!<[0-9A-Za-z;/?:@&=+$,_.!~*\'()\[\]%-]+>', Keyword.Type),
             # a tag in the form '!', '!suffix' or '!handle!suffix'
             (r'!(?:[0-9A-Za-z_-]+)?'
-                r'(?:![0-9A-Za-z;/?:@&=+$,_.!~*\'()\[\]%-]+)?', Name.Type),
+             r'(?:![0-9A-Za-z;/?:@&=+$,_.!~*\'()\[\]%-]+)?', Keyword.Type),
             # an anchor
-            (r'&[0-9A-Za-z_-]+', Name.Anchor),
+            (r'&[0-9A-Za-z_-]+', Name.Label),
             # an alias
-            (r'\*[0-9A-Za-z_-]+', Name.Alias),
+            (r'\*[0-9A-Za-z_-]+', Name.Variable),
         ],
 
         # block collections and scalars
@@ -1228,7 +1227,7 @@ class YAMLLexer(ExtendedRegexLexer):
             (r':(?=[ ]|$)', set_indent(Punctuation.Indicator, implicit=True)),
             # literal and folded scalars
             (r'[|>]', Punctuation.Indicator,
-                ('block-scalar-content', 'block-scalar-header')),
+             ('block-scalar-content', 'block-scalar-header')),
         ],
 
         # flow collections and quoted scalars
@@ -1238,17 +1237,17 @@ class YAMLLexer(ExtendedRegexLexer):
             # a flow mapping
             (r'\{', Punctuation.Indicator, 'flow-mapping'),
             # a single-quoted scalar
-            (r'\'', Literal.Scalar.Flow.Quote, 'single-quoted-scalar'),
+            (r'\'', String, 'single-quoted-scalar'),
             # a double-quoted scalar
-            (r'\"', Literal.Scalar.Flow.Quote, 'double-quoted-scalar'),
+            (r'\"', String, 'double-quoted-scalar'),
         ],
 
         # the content of a flow collection
         'flow-collection': [
             # whitespaces
-            (r'[ ]+', Text.Blank),
+            (r'[ ]+', Text),
             # line breaks
-            (r'\n+', Text.Break),
+            (r'\n+', Text),
             # a comment
             (r'#[^\n]*', Comment.Single),
             # simple indicators
@@ -1259,8 +1258,8 @@ class YAMLLexer(ExtendedRegexLexer):
             include('flow-nodes'),
             # a plain scalar
             (r'(?=[^ \t\n\r\f\v?:,\[\]{}#&*!|>\'"%@`])',
-                something(Literal.Scalar.Plain),
-                'plain-scalar-in-flow-context'),
+             something(Name.Variable),
+             'plain-scalar-in-flow-context'),
         ],
 
         # a flow sequence indicated by '[' and ']'
@@ -1282,37 +1281,36 @@ class YAMLLexer(ExtendedRegexLexer):
         # block scalar lines
         'block-scalar-content': [
             # line break
-            (r'\n', Text.Break),
+            (r'\n', Text),
             # empty line
             (r'^[ ]+$',
-                parse_block_scalar_empty_line(Text.Indent,
-                    Literal.Scalar.Block)),
+             parse_block_scalar_empty_line(Text, Name.Constant)),
             # indentation spaces (we may leave the state here)
-            (r'^[ ]*', parse_block_scalar_indent(Text.Indent)),
+            (r'^[ ]*', parse_block_scalar_indent(Text)),
             # line content
-            (r'[^\n\r\f\v]+', Literal.Scalar.Block),
+            (r'[^\n\r\f\v]+', Name.Constant),
         ],
 
         # the content of a literal or folded scalar
         'block-scalar-header': [
             # indentation indicator followed by chomping flag
             (r'([1-9])?[+-]?(?=[ ]|$)',
-                set_block_scalar_indent(Punctuation.Indicator),
-                'ignored-line'),
+             set_block_scalar_indent(Punctuation.Indicator),
+             'ignored-line'),
             # chomping flag followed by indentation indicator
             (r'[+-]?([1-9])?(?=[ ]|$)',
-                set_block_scalar_indent(Punctuation.Indicator),
-                'ignored-line'),
+             set_block_scalar_indent(Punctuation.Indicator),
+             'ignored-line'),
         ],
 
         # ignored and regular whitespaces in quoted scalars
         'quoted-scalar-whitespaces': [
             # leading and trailing whitespaces are ignored
-            (r'^[ ]+|[ ]+$', Text.Blank),
+            (r'^[ ]+|[ ]+$', Text),
             # line breaks are ignored
-            (r'\n+', Text.Break),
+            (r'\n+', Text),
             # other whitespaces are a part of the value
-            (r'[ ]+', Literal.Scalar.Flow),
+            (r'[ ]+', Name.Variable),
         ],
 
         # single-quoted scalars
@@ -1320,11 +1318,11 @@ class YAMLLexer(ExtendedRegexLexer):
             # include whitespace and line break rules
             include('quoted-scalar-whitespaces'),
             # escaping of the quote character
-            (r'\'\'', Literal.Scalar.Flow.Escape),
+            (r'\'\'', String.Escape),
             # regular non-whitespace characters
-            (r'[^ \t\n\r\f\v\']+', Literal.Scalar.Flow),
+            (r'[^ \t\n\r\f\v\']+', String),
             # the closing quote
-            (r'\'', Literal.Scalar.Flow.Quote, '#pop'),
+            (r'\'', String, '#pop'),
         ],
 
         # double-quoted scalars
@@ -1332,64 +1330,63 @@ class YAMLLexer(ExtendedRegexLexer):
             # include whitespace and line break rules
             include('quoted-scalar-whitespaces'),
             # escaping of special characters
-            (r'\\[0abt\tn\nvfre "\\N_LP]', Literal.Scalar.Flow.Escape),
+            (r'\\[0abt\tn\nvfre "\\N_LP]', String),
             # escape codes
             (r'\\(?:x[0-9A-Fa-f]{2}|u[0-9A-Fa-f]{4}|U[0-9A-Fa-f]{8})',
-                Literal.Scalar.Flow.Escape),
+             String.Escape),
             # regular non-whitespace characters
-            (r'[^ \t\n\r\f\v\"\\]+', Literal.Scalar.Flow),
+            (r'[^ \t\n\r\f\v\"\\]+', String),
             # the closing quote
-            (r'"', Literal.Scalar.Flow.Quote, '#pop'),
+            (r'"', String, '#pop'),
         ],
 
         # the beginning of a new line while scanning a plain scalar
         'plain-scalar-in-block-context-new-line': [
             # empty lines
-            (r'^[ ]+$', Text.Blank),
+            (r'^[ ]+$', Text),
             # line breaks
-            (r'\n+', Text.Break),
+            (r'\n+', Text),
             # document start and document end indicators
-            (r'^(?=---|\.\.\.)', something(Punctuation.Document), '#pop:3'),
+            (r'^(?=---|\.\.\.)', something(Name.Namespace), '#pop:3'),
             # indentation spaces (we may leave the block line state here)
-            (r'^[ ]*', parse_plain_scalar_indent(Text.Indent), '#pop'),
+            (r'^[ ]*', parse_plain_scalar_indent(Text), '#pop'),
         ],
 
         # a plain scalar in the block context
         'plain-scalar-in-block-context': [
             # the scalar ends with the ':' indicator
-            (r'[ ]*(?=:[ ]|:$)', something(Text.Blank), '#pop'),
+            (r'[ ]*(?=:[ ]|:$)', something(Text), '#pop'),
             # the scalar ends with whitespaces followed by a comment
-            (r'[ ]+(?=#)', Text.Blank, '#pop'),
+            (r'[ ]+(?=#)', Text, '#pop'),
             # trailing whitespaces are ignored
-            (r'[ ]+$', Text.Blank),
+            (r'[ ]+$', Text),
             # line breaks are ignored
-            (r'\n+', Text.Break, 'plain-scalar-in-block-context-new-line'),
+            (r'\n+', Text, 'plain-scalar-in-block-context-new-line'),
             # other whitespaces are a part of the value
             (r'[ ]+', Literal.Scalar.Plain),
             # regular non-whitespace characters
-            (r'(?::(?![ \t\n\r\f\v])|[^ \t\n\r\f\v:])+',
-                Literal.Scalar.Plain),
+            (r'(?::(?![ \t\n\r\f\v])|[^ \t\n\r\f\v:])+', Literal.Scalar.Plain),
         ],
 
         # a plain scalar is the flow context
         'plain-scalar-in-flow-context': [
             # the scalar ends with an indicator character
-            (r'[ ]*(?=[,:?\[\]{}])', something(Text.Blank), '#pop'),
+            (r'[ ]*(?=[,:?\[\]{}])', something(Text), '#pop'),
             # the scalar ends with a comment
-            (r'[ ]+(?=#)', Text.Blank, '#pop'),
+            (r'[ ]+(?=#)', Text, '#pop'),
             # leading and trailing whitespaces are ignored
-            (r'^[ ]+|[ ]+$', Text.Blank),
+            (r'^[ ]+|[ ]+$', Text),
             # line breaks are ignored
-            (r'\n+', Text.Break),
+            (r'\n+', Text),
             # other whitespaces are a part of the value
-            (r'[ ]+', Literal.Scalar.Plain),
+            (r'[ ]+', Name.Variable),
             # regular non-whitespace characters
-            (r'[^ \t\n\r\f\v,:?\[\]{}]+', Literal.Scalar.Plain),
+            (r'[^ \t\n\r\f\v,:?\[\]{}]+', Name.Variable),
         ],
 
     }
 
     def get_tokens_unprocessed(self, text=None, context=None):
         if context is None:
-            context = YAMLLexerContext(text, 0)
-        return super(YAMLLexer, self).get_tokens_unprocessed(text, context)
+            context = YamlLexerContext(text, 0)
+        return super(YamlLexer, self).get_tokens_unprocessed(text, context)
